--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "@neshan-maps-platform/mapbox-gl-react": "^1.0.2",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "sweetalert2": "^11.16.0"
+    "sweetalert2": "^11.16.0",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
