--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^4.1.0",
     "@neshan-maps-platform/mapbox-gl-react": "^1.0.2",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@hookform/devtools": "^4.3.3"
   }
 }
